--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ aiofiles==0.5.0
 aniso8601==7.0.0
 async-exit-stack==1.0.1
 async-generator==1.10
+boto3==1.17.62
+botocore==1.20.62
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
@@ -18,17 +20,20 @@ h11==0.12.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jmespath==0.10.0
 MarkupSafe==1.1.1
 orjson==3.5.2
 promise==2.3
 protobuf==3.15.8
 pydantic==1.8.1
+python-dateutil==2.8.1
 python-dotenv==0.17.1
 python-etcd==0.4.5
 python-multipart==0.0.5
 PyYAML==5.4.1
 requests==2.25.1
 Rx==1.6.1
+s3transfer==0.4.2
 six==1.15.0
 starlette==0.13.6
 tenacity==7.0.0
