--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ promise==2.3
 protobuf==3.15.8
 pydantic==1.8.1
 python-dateutil==2.8.1
+python-decouple==3.4
 python-dotenv==0.17.1
 python-etcd==0.4.5
 python-multipart==0.0.5
